# ghostmodule

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  conanfile.txt
cmake/: FetchGhost.cmake  FindCatch.cmake  FindGRPC.cmake  FindGoogletest.cmake  FindProtobuf.cmake  Ghost.cmake  ProtobufGeneration.cmake  clang-format.cmake  generate_protobuf.cmake
examples/: connected_module_test.cpp  connection_extension_daemon.cpp  connection_extension_test.cpp  connection_grpc_messenger.cpp  connection_grpc_robot.cpp  module_minimum.cpp  module_with_console.cpp  persistence_todo_list.cpp
include/: BlockingQueue.hpp  Client.hpp  (+33 more)
src/: CMakeLists.txt  Client.cpp  CommandLine.cpp  CommandLineInterpreter.cpp  CommandLineInterpreter.hpp  CommandLineParser.cpp  CommandLineParser.hpp  Configuration.cpp  Connection.cpp  ConnectionConfiguration.cpp  ConnectionFactory.cpp  ConnectionFactoryRule.cpp  ConnectionManager.cpp  Console.cpp  Console.hpp  ConsoleDeviceUnix.cpp  ConsoleDeviceWindows.cpp  ConsoleStream.hpp  EnterPressedInputEvent.cpp  EnterPressedInputEvent.hpp  GenericMessageConverter.cpp  GhostLogger.cpp  GhostLogger.hpp  InputController.cpp  InputController.hpp  InputControllerAccess.hpp  InputEvent.hpp  InputModeInputEvent.cpp  InputModeInputEvent.hpp  LineRequestInputEvent.cpp  LocalConsoleUnix.cpp  LocalConsoleWindows.cpp  Logger.cpp  LoggerLine.cpp  MessageHandler.cpp  Module.cpp  Module.hpp  ModuleBuilder.cpp  ModuleBuilder.hpp  NetworkConnectionConfiguration.cpp  (+21 more)
src/commands/: ExitCommand.cpp  ExitCommand.hpp  HelpCommand.cpp  HelpCommand.hpp  LoginCommand.cpp  LoginCommand.hpp
src/connected_module/: CMakeLists.txt  ConnectedModule.cpp  ConnectedModule.hpp  ConnectedModuleComponentBuilder.cpp  ConnectedModuleComponentBuilder.hpp  Connectivity.cpp  Connectivity.hpp  ConnectivityComponentBuilder.cpp  ConnectivityComponentBuilder.hpp  RemoteAccessServer.cpp  RemoteAccessServer.hpp  RemoteConsole.cpp  RemoteConsole.hpp  RemoteControlClient.cpp  RemoteControlClient.hpp  RemoteController.cpp  RemoteController.hpp  RemoteControllersHandler.cpp  RemoteControllersHandler.hpp  RemoteHandler.cpp  RemoteHandler.hpp
src/connection/: CMakeLists.txt  Client.cpp  Configuration.cpp  Configuration.hpp  Connection.cpp  ConnectionConfiguration.cpp  ConnectionFactory.cpp  ConnectionFactory.hpp  ConnectionFactoryRule.cpp  ConnectionFactoryRule.impl.hpp  ConnectionManager.cpp  ConnectionManager.hpp  GenericMessageConverter.cpp  GenericMessageConverter.hpp  GenericReader.impl.hpp  MessageHandler.cpp  MessageHandler.hpp  MessageHandlerCallback.hpp  NetworkConnectionConfiguration.cpp  ProtobufConfiguration.cpp  ProtobufMessage.cpp  Publisher.cpp  QueuedSink.hpp  ReadableConnection.cpp  Reader.cpp  Reader.hpp  ReaderSink.cpp  ReaderSink.hpp  Server.cpp  Subscriber.cpp  WritableConnection.cpp  Writer.cpp  Writer.hpp  WriterSink.cpp  WriterSink.hpp
src/connection/network/: PublisherGRPC.cpp  RPCStateMachine.cpp  ServerGRPC.cpp  SubscriberGRPC.cpp
src/connection_extension/: CMakeLists.txt  ConnectionExtension.cpp  ConnectionExtension.hpp  ConnectionExtensionBuilder.cpp  ConnectionExtensionBuilder.hpp  RemoteAccessServer.cpp  RemoteAccessServer.hpp  RemoteConsole.cpp  RemoteConsole.hpp  RemoteControlClient.cpp  RemoteControlClient.hpp  RemoteControllersHandler.cpp  RemoteControllersHandler.hpp  RemoteHandler.cpp  RemoteHandler.hpp
src/connection_grpc/: BaseClientGRPC.hpp  BaseClientGRPC.impl.hpp  CMakeLists.txt  ClientGRPC.cpp  ClientGRPC.hpp  ClientManager.cpp  ClientManager.hpp  CompletionQueueExecutor.cpp  CompletionQueueExecutor.hpp  ConnectionConfigurationGRPC.cpp  ConnectionFactoryRuleGRPC.hpp  ConnectionGRPC.cpp  IncomingRPC.cpp  IncomingRPC.hpp  OutgoingRPC.hpp  PublisherClientHandler.cpp  PublisherClientHandler.hpp  PublisherGRPC.cpp  PublisherGRPC.hpp  RPC.hpp  RPC.impl.hpp  RPCFinish.hpp  RPCOperation.hpp  RPCOperation.impl.hpp  RPCRead.hpp  RPCRequest.hpp  RPCStateMachine.cpp  RemoteClientGRPC.cpp  RemoteClientGRPC.hpp  ServerGRPC.cpp  ServerGRPC.hpp  SubscriberGRPC.cpp  SubscriberGRPC.hpp
src/connection_grpc/rpc/: IncomingRPC.cpp  IncomingRPC.hpp  OutgoingRPC.cpp  OutgoingRPC.hpp  RPC.hpp  RPC.impl.hpp  RPCConnect.hpp  RPCDone.hpp  RPCFinish.hpp  RPCOperation.hpp  RPCOperation.impl.hpp  RPCRead.hpp  RPCRequest.hpp  RPCServerFinish.hpp  RPCStateMachine.cpp  RPCStateMachine.hpp  RPCWrite.hpp  ReaderRPC.cpp  ReaderRPC.hpp  WriterRPC.cpp  WriterRPC.hpp
src/module/: CMakeLists.txt  Command.cpp  CommandExecutionContext.cpp  CommandExecutionContext.hpp  CommandLine.cpp  CommandLineInterpreter.cpp  CommandLineInterpreter.hpp  CommandLineParser.cpp  CommandLineParser.hpp  CommandParameter.cpp  Console.cpp  Console.hpp  ConsoleDevice.hpp  ConsoleDeviceUnix.cpp  ConsoleDeviceUnix.hpp  ConsoleDeviceWindows.cpp  ConsoleDeviceWindows.hpp  ConsoleStream.hpp  EnterPressedInputEvent.cpp  EnterPressedInputEvent.hpp  GhostLogger.cpp  GhostLogger.hpp  InputController.cpp  InputController.hpp  InputControllerAccess.hpp  InputEvent.hpp  InputModeInputEvent.cpp  InputModeInputEvent.hpp  LineRequestInputEvent.cpp  LineRequestInputEvent.hpp  Logger.cpp  LoggerLine.cpp  Module.cpp  Module.hpp  ModuleBuilder.cpp  ModuleBuilder.hpp  ModuleComponent.cpp  ModuleExtension.cpp  OutputController.cpp  OutputController.hpp  (+17 more)
src/module/commands/: ExitCommand.cpp  ExitCommand.hpp  HelpCommand.cpp  HelpCommand.hpp  LoginCommand.cpp  LoginCommand.hpp
src/network/: ClientGRPC.cpp  ClientManager.cpp  CompletionQueueExecutor.cpp  PublisherClientHandler.cpp  PublisherGRPC.cpp  RPCStateMachine.cpp  RemoteClientGRPC.cpp  ServerGRPC.cpp  SubscriberGRPC.cpp
src/persistence/: CMakeLists.txt  DataCollectionFile.cpp  DataCollectionFile.hpp  DataFile.cpp  DataFile.hpp  DataManager.cpp  DataManager.hpp  DatabaseFile.cpp  DatabaseFile.hpp  SaveData.cpp  SaveData.hpp  SaveFile.cpp  SaveFile.hpp  SaveManager.cpp  SaveManager.hpp
src/persistence_extension/: CMakeLists.txt  PersistenceExtension.cpp  PersistenceExtension.hpp  PersistenceExtensionBuilder.cpp  PersistenceExtensionBuilder.hpp
(+252 files in other folders)
